# QuicKB

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: main.py
src/chunking/: __init__.py  base_chunker.py  fixed_token_chunker.py  kamradt_modified_chunker.py  llm_semantic_chunker.py  registry.py
src/hub_upload/: card_generator.py  dataset_pusher.py
src/pipeline/: __init__.py  config.py  datasets.py  pipeline.py  stages.py
src/prompts/: question_generation.py
src/synth_dataset/: question_generator.py  rate_limiter.py
src/training/: train.py
