[project]
name = "quickb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.3.0",
    "attrs==24.3.0",
    "backoff==2.2.1",
    "datasets==3.2.0",
    "litellm==1.59.6",
    "numpy==2.2.2",
    "pyyaml==6.0.2",
    "sentence-transformers==3.4.0",
    "tiktoken==0.8.0",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers==4.48.1",
]
